# CHIP-8

./: .gitignore  CMakeLists.txt  README.md  aux.c  aux.h  c8Decode.c  c8Decode.h  c8Env.c  c8Env.h  c8IO.c  c8IO.h  c8Instructions.c  c8Instructions.h  c8_decode.c  chip8.c  chip8c.c  compiler_test.c
codegen/: build_decode.py  instruction_list.txt
programs/: addition.src  all_instructions.src  movingsquare.src  pattern.src  programs.txt
test/: CMakeLists.txt  all_instructions.src  c8Instructions_test.c  compiler_tests.c  reference.txt
